--- a/src/index.css
+++ b/src/index.css
@@ -5,9 +5,9 @@
 
 @import 'tailwindcss';
 
-@tailwind base;
+/* @tailwind base;
 @tailwind components;
-@tailwind utilities;
+@tailwind utilities; */
 
 @layer base {
     :root {
